force-app/main/default/objects/Historical_Order_Item__c/Historical_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Historical Order Item</label>
    <nameField>
        <label>Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>