force-app/main/default/objects/Historical_Order_Item__c/fields/Bundle_Group_Mode__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Group_Mode__c</fullName>
    <label>Bundle Group Mode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>