force-app/main/default/objects/Historical_Order_Item__c/fields/Bundled_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Item_Id__c</fullName>
    <label>Bundled Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>