force-app/main/default/objects/Historical_Order_Item__c/fields/Bundled_Item_Needs_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Item_Needs_Shipping__c</fullName>
    <label>Bundled Item Needs Shipping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>