force-app/main/default/objects/Historical_Order_Item__c/fields/Bundled_Item_Title__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Item_Title__c</fullName>
    <label>Bundled Item Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>