force-app/main/default/objects/Historical_Order_Item__c/fields/Group_Registration__c.field-meta.xml
<CustomField>
    <fullName>Group_Registration__c</fullName>
    <label>Group Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>off</fullName>
                <default>true</default>
                <label>off</label>
            </value>
            <value>
                <fullName>on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>