force-app/main/default/objects/Historical_Order_Item__c/fields/Historical_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Historical_Order_Id__c</fullName>
    <label>Historical Order Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>