force-app/main/default/objects/Historical_Order_Item__c/fields/Line_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Line_SubTotal__c</fullName>
    <label>Line SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>