force-app/main/default/objects/Historical_Order_Item__c/fields/Order_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Type__c</fullName>
    <label>Order Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>line_item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>