force-app/main/default/objects/Historical_Order_Item__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>