force-app/main/default/objects/Historical_Order_Item__c/fields/SF_Historical_Order__c.field-meta.xml
<CustomField>
    <fullName>SF_Historical_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Historical Order</label>
    <referenceTo>Historical_Order__c</referenceTo>
    <relationshipLabel>Historical Order Items</relationshipLabel>
    <relationshipName>Historical_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>