force-app/main/default/objects/Historical_Order_Item__c/fields/SF_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>SF_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Historical Order Items</relationshipLabel>
    <relationshipName>Historical_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>