force-app/main/default/objects/Historical_Order_Item__c/fields/Unit_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_With_Tax__c</fullName>
    <formula>Unit_Price__c  +  (  Line_Tax__c  /  Quantity__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>